[package]
authors = ["you"]
default-run = "acfun_live_toolbox"
description = "AcFun Live Toolbox"
edition = "2021"
license = ""
name = "acfun_live_toolbox"
repository = ""
rust-version = "1.57"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
protobuf-codegen = "3.1.0"
tauri-build = {version = "1.0.2", features = []}

[dependencies]
aes = { version = "0.8.1", features = [] }
base64 = "0.13.0"
cbc = { version = "0.1.2", features = ["alloc", "block-padding", "std", "zeroize"] }
chrono = "0.4.19"
cipher = { version = "0.4.3", features = ["rand_core", "std", "zeroize", "block-padding", "alloc"] }
crypto = { version = "0.3.0", features = ["cipher", "std"] }
crypto-common = { version = "0.1.4", features = ["rand_core", "std"] }
hyper = {version = "0.14", features = ["full"]}
hyper-tls = "0.5.0"
log = "0.4.17"
protobuf = "3.1.0"
protobuf-json-mapping = "3.1.0"
rand_chacha = "0.3.1"
rusqlite = {version = "0.27.0", features = ["bundled", "serde_json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tauri = {version = "1.0.2", features = ["api-all"]}
tokio = {version = "1", features = ["full"]}
window-shadows = "0.1.3"
window-vibrancy = "0.1.3"
uuid = { version = "1.1.2", features = ["v4"] }
timer = "0.2.0"
flate2 = "1.0.24"

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/tauri-plugin-log"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
